@startuml

title __LOGIN's Class Diagram__\n

  package com.avansprojects.antl {
    package com.avansprojects.antl.ui.login {
      class LoginFragment {
          - mUser : TextView
          - mPassword : TextView
          - mSpinner : ProgressBar
          {static} + newInstance()
          + onCreateView()
          + onActivityCreated()
      }
    }
  }
  

  package com.avansprojects.antl {
    package com.avansprojects.antl.ui.login {
      class LoginViewModel {
          - _userName : String
          - _passWord : String
          + Login()
          + setUser()
          + setPassword()
      }
    }
  }
  

  package com.avansprojects.antl {
    package com.avansprojects.antl.ui.login {
      class RegisterFragment {
          - _User : TextView
          - _Password : TextView
          - _Email : TextView
          - mSpinner : ProgressBar
          {static} + newInstance()
          + onCreateView()
          + onActivityCreated()
      }
    }
  }
  

  package com.avansprojects.antl {
    package com.avansprojects.antl.ui.login {
      class RegisterViewModel {
          - _userName : String
          - _email : String
          - _passWord : String
          + Register()
          + setUserName()
          + setPassword()
          + setEmail()
      }
    }
  }
  

  LoginFragment -up-|> Fragment
  LoginFragment o-- LoginViewModel : mViewModel
  SavedState -up-|> Parcelable
  LoginViewModel -up-|> ViewModel
  RegisterFragment -up-|> Fragment
  RegisterFragment o-- RegisterViewModel : mViewModel
  SavedState -up-|> Parcelable
  RegisterViewModel -up-|> ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
